--- a/codeIgniter/.gitignore
+++ b/codeIgniter/.gitignore
@@ -10,7 +10,8 @@ application/logs/*
 
 composer.lock
 tests/mocks/database/ci_test.sqlite
-
+*system
+/system/
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
